Ispravke sa prvog PR review-a
