# client-service/docs/openapi.yml
@@ -1,27 +1,25 @@
 openapi: 3.1.0
 info:
   title: Client Service API
-  description: API za upravljanje klijentima banke
-  version: "1.0"
+  description: Servis za upravljanje klijentima banke. Dostupan samo zaposlenima.
+  version: 1.0.0
 servers:
-  - url: http://localhost:8083
-    description: Generated server url
+- url: http://localhost:8083
 security:
-  - bearerAuth: []
+- Bearer Authentication: []
 paths:
   /customers/{id}:
     put:
       tags:
-        - client-controller
-      summary: Izmena podataka klijenta
+      - client-controller
       operationId: updateClient
       parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
       requestBody:
         content:
           application/json:
@@ -37,58 +35,56 @@ paths:
                 $ref: "#/components/schemas/ClientResponseDto"
     delete:
       tags:
-        - client-controller
-      summary: Brisanje klijenta
+      - client-controller
       operationId: deleteClient
       parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
       responses:
-        "204":
-          description: No Content
+        "200":
+          description: OK
   /customers:
     get:
       tags:
-        - client-controller
-      summary: Pretraga klijenata
+      - client-controller
       operationId: searchClients
       parameters:
-        - name: ime
-          in: query
-          required: false
-          schema:
-            type: string
-        - name: prezime
-          in: query
-          required: false
-          schema:
-            type: string
-        - name: email
-          in: query
-          required: false
-          schema:
-            type: string
-        - name: page
-          in: query
-          required: false
-          schema:
-            type: integer
-            format: int32
-            default: 0
-            minimum: 0
-        - name: size
-          in: query
-          required: false
-          schema:
-            type: integer
-            format: int32
-            default: 10
-            maximum: 100
-            minimum: 1
+      - name: ime
+        in: query
+        required: false
+        schema:
+          type: string
+      - name: prezime
+        in: query
+        required: false
+        schema:
+          type: string
+      - name: email
+        in: query
+        required: false
+        schema:
+          type: string
+      - name: page
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 0
+          minimum: 0
+      - name: size
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 10
+          maximum: 100
+          minimum: 1
       responses:
         "200":
           description: OK
@@ -98,8 +94,7 @@ paths:
                 $ref: "#/components/schemas/PageClientResponseDto"
     post:
       tags:
-        - client-controller
-      summary: Kreiranje klijenta
+      - client-controller
       operationId: createClient
       requestBody:
         content:
@@ -108,8 +103,8 @@ paths:
               $ref: "#/components/schemas/ClientCreateRequestDto"
         required: true
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
           content:
             '*/*':
               schema:
@@ -117,29 +112,31 @@ paths:
   /customers/search:
     get:
       tags:
-        - client-controller
-      summary: Globalna pretraga klijenata
+      - client-controller
       operationId: globalSearchClients
       parameters:
-        - name: query
-          in: query
-          required: false
-          schema:
-            type: string
-        - name: page
-          in: query
-          required: false
-          schema:
-            type: integer
-            format: int32
-            default: 0
-        - name: size
-          in: query
-          required: false
-          schema:
-            type: integer
-            format: int32
-            default: 10
+      - name: query
+        in: query
+        required: false
+        schema:
+          type: string
+      - name: page
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 0
+          minimum: 0
+      - name: size
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 10
+          maximum: 100
+          minimum: 1
       responses:
         "200":
           description: OK
@@ -150,18 +147,14 @@ paths:
   /customers/jmbg/{jmbg}:
     get:
       tags:
-        - client-controller
-      summary: Pronalazak ID klijenta po JMBG-u
-      operationId: getClientIdByJmbg
+      - client-controller
+      operationId: getIdByJmbg
       parameters:
-        - name: jmbg
-          in: path
-          required: true
-          schema:
-            type: string
-            minLength: 13
-            maxLength: 13
-            pattern: "^[0-9]{13}$"
+      - name: jmbg
+        in: path
+        required: true
+        schema:
+          type: string
       responses:
         "200":
           description: OK
@@ -171,44 +164,6 @@ paths:
                 $ref: "#/components/schemas/ClientIdResponseDto"
 components:
   schemas:
-    ClientCreateRequestDto:
-      type: object
-      properties:
-        ime:
-          type: string
-          minLength: 1
-        prezime:
-          type: string
-          minLength: 1
-        datumRodjenja:
-          type: integer
-          format: int64
-        pol:
-          type: string
-          enum:
-            - M
-            - Z
-        email:
-          type: string
-          format: email
-          minLength: 1
-        brojTelefona:
-          type: string
-          pattern: "^\\+?[0-9]{8,15}$"
-        adresa:
-          type: string
-        jmbg:
-          type: string
-          minLength: 13
-          maxLength: 13
-          pattern: "^[0-9]{13}$"
-      required:
-        - datumRodjenja
-        - email
-        - ime
-        - jmbg
-        - pol
-        - prezime
     ClientUpdateRequestDto:
       type: object
       properties:
@@ -224,8 +179,8 @@ components:
         pol:
           type: string
           enum:
-            - M
-            - Z
+          - M
+          - Z
         email:
           type: string
           format: email
@@ -234,6 +189,9 @@ components:
           pattern: "^\\+?[0-9]{8,15}$"
         adresa:
           type: string
+      required:
+      - ime
+      - prezime
     ClientResponseDto:
       type: object
       properties:
@@ -250,29 +208,61 @@ components:
         pol:
           type: string
           enum:
-            - M
-            - Z
+          - M
+          - Z
         email:
           type: string
         brojTelefona:
           type: string
         adresa:
           type: string
-    ClientIdResponseDto:
+    ClientCreateRequestDto:
       type: object
       properties:
-        id:
+        ime:
+          type: string
+          minLength: 1
+        prezime:
+          type: string
+          minLength: 1
+        datumRodjenja:
           type: integer
           format: int64
+        pol:
+          type: string
+          enum:
+          - M
+          - Z
+        email:
+          type: string
+          format: email
+          minLength: 1
+        brojTelefona:
+          type: string
+          pattern: "^\\+?[0-9]{8,15}$"
+        adresa:
+          type: string
+        jmbg:
+          type: string
+          maxLength: 13
+          minLength: 13
+          pattern: "^[0-9]{13}$"
+      required:
+      - datumRodjenja
+      - email
+      - ime
+      - jmbg
+      - pol
+      - prezime
     PageClientResponseDto:
       type: object
       properties:
-        totalPages:
-          type: integer
-          format: int32
         totalElements:
           type: integer
           format: int64
+        totalPages:
+          type: integer
+          format: int32
         size:
           type: integer
           format: int32
@@ -304,14 +294,14 @@ components:
           format: int64
         sort:
           $ref: "#/components/schemas/SortObject"
-        pageNumber:
-          type: integer
-          format: int32
+        paged:
+          type: boolean
         pageSize:
           type: integer
           format: int32
-        paged:
-          type: boolean
+        pageNumber:
+          type: integer
+          format: int32
         unpaged:
           type: boolean
     SortObject:
@@ -323,8 +313,14 @@ components:
           type: boolean
         unsorted:
           type: boolean
+    ClientIdResponseDto:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
   securitySchemes:
-    bearerAuth:
+    Bearer Authentication:
       type: http
       scheme: bearer
       bearerFormat: JWT
